fix: MemberService, MemberRepository, SecurityConfig 충돌 해결